Fixing spacing and cleaning up page

--- a/gregvanaken-github-io/src/app/app.component.css
+++ b/gregvanaken-github-io/src/app/app.component.css
@@ -149,17 +149,18 @@ svg.material-icons:not(:last-child) {
 
 .about-me-container {
   width: 100%;
-  margin: 0;
+  margin: auto;
 }
 .about-me-container.avatar {
-  display: inline-block;
-  padding: 0;
   width: 20%;
   float: left;
+  margin: auto;
+  padding-bottom: 24px;
+  display: flex;
 }
 .about-me-container.textbox {
-  padding: 0;
-  margin: 0;
+  white-space: normal;
+  margin: auto;
 }
 
 a,
